export class ConfigItem {
  constructor(
    public readonly key: string,
    public readonly value: any
  ) {}
}
